testdata/baselines/reference/submodule/conformance/templateInsideCallback.errors.txt
templateInsideCallback.js(17,18): error TS7006: Parameter 'x' implicitly has an 'any' type.
templateInsideCallback.js(47,18): error TS7006: Parameter 'array' implicitly has an 'any' type.


==== templateInsideCallback.js (2 errors) ====
    /**
     * @typedef Oops
     * @template T
     * @property {T} a
     * @property {T} b
     */
    /**
     * @callback Call
     * @template T
     * @param {T} x
     * @returns {T}
     */
    /**
     * @template T
     * @type {Call<T>}
     */
    const identity = x => x;
                     ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
    /**
     * @typedef Nested
     * @property {Object} oh
     * @property {number} oh.no
     * @template T
     * @property {string} oh.noooooo
     */
    
    
    /**
     * @overload
     * @template T
     * @template U
     * @param {T[]} array
     * @param {(x: T) => U[]} iterable
     * @returns {U[]}
     */
    /**
     * @overload
     * @template T
     * @param {T[][]} array
     * @returns {T[]}
     */
    /**
     * @param {unknown[]} array
     * @param {(x: unknown) => unknown} iterable
     * @returns {unknown[]}
     */
    function flatMap(array, iterable = identity) {
                     ~~~~~
!!! error TS7006: Parameter 'array' implicitly has an 'any' type.
      /** @type {unknown[]} */
      const result = [];
      for (let i = 0; i < array.length; i += 1) {
        result.push(.../** @type {unknown[]} */(iterable(array[i])));
      }
      return result;
    }
    